Move to Java 21 (stage 3)
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>